tests/errors/constraints/neq-violation.expect
---CODE---
1
---STDERR---
error: instantiation violates parameter constraint
  ┌─ tests/errors/constraints/neq-violation.fil:2:43
  │
2 │ comp NeqViolation[A]<'G: 1>() -> () where A != 5, A == 5 {
  │                                           ^^^^^^ constraint was violated
  ·
7 │   Bad := new NeqViolation[5];
  │              ------------ instantiation occurs here

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
